side button text alignment fixed

--- a/style.css
+++ b/style.css
@@ -95,11 +95,13 @@ a.navbar-brand{
 @media (max-width:992px) {
 .lsbutton{
     width:25%;
+    display: flex;
+    flex-direction: column;
    
 }
 .lsbutton h1{
     display:block;
-    font-size:15px;
+    font-size:12px;
         color:red;
     }
     
